--- a/_toc.yml
+++ b/_toc.yml
@@ -14,7 +14,7 @@ chapters:
 - file: organizing-project-code
 - file: reading-list
 - file: resources
-- file: contact-information
+- file: contact-info
 - file: acknowledgments
 
     
