--- a/_toc.yml
+++ b/_toc.yml
@@ -7,8 +7,8 @@ root: intro
   # - caption: Lab Philosophy
 chapters:
 - file: lab-philosophy
-- file: general-expectations
-- file: specific-expectations
+- file: what-to-expect
+- file: whats-expected
 - file: onboarding   
 - file: running-experiments
 - file: organizing-project-code
