--- a/_toc.yml
+++ b/_toc.yml
@@ -5,6 +5,8 @@ format: jb-book
 root: intro
 # parts: 
   # - caption: Lab Philosophy
+defaults:  # The defaults key will be applied to all chapters and sub-sections
+  titlesonly: True
 chapters:
 - file: lab-philosophy
 - file: what-to-expect
